--- a/experiment_data.ipynb
+++ b/experiment_data.ipynb
@@ -1380,11 +1380,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# node 2 , playout 10 \n",
+      "\n",
+      "avg_compute_time: 71.887\n",
+      "avg_total_time:  77.172\n",
+      "avg_sync_time:  5.284\n",
+      "\n",
+      "# node 4 , playout 10 \n",
+      "\n",
+      "avg_compute_time: 35.703\n",
+      "avg_total_time:  43.896\n",
+      "avg_sync_time:  8.193\n",
+      "\n",
+      "# node 3 , playout 10 \n",
+      "\n",
+      "avg_compute_time: 47.477\n",
+      "avg_total_time:  54.698\n",
+      "avg_sync_time:  7.221\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"hi\")"
+    "log_dir = \"./numa_log\"\n",
+    "\n",
+    "# load files\n",
+    "log_data = {}\n",
+    "\n",
+    "for f in os.listdir(log_dir):\n",
+    "    if \"jq\" not in f and \"sh\" not in f and \"node\" in f:\n",
+    "        playout_num = f.split(\"_\")[4]\n",
+    "        node_num = f.split(\"_\")[3].split(\"node\")[1]\n",
+    "\n",
+    "        if node_num not in log_data:\n",
+    "            log_data[node_num] = {}\n",
+    "\n",
+    "        if playout_num not in log_data[node_num]:\n",
+    "            log_data[node_num][playout_num] = [f]\n",
+    "        else:\n",
+    "            log_data[node_num][playout_num].append(f)\n",
+    "            \n",
+    "        \n",
+    "# print(json.dumps(log_data, indent=4))\n",
+    "\n",
+    "avg_data = {}\n",
+    "\n",
+    "for node_num in log_data:\n",
+    "    avg_data[node_num] = {}\n",
+    "    node_data = log_data[node_num]\n",
+    "    for playout in node_data:\n",
+    "        avg_data[node_num][playout] = {}\n",
+    "        playout_data = node_data[playout]\n",
+    "        \n",
+    "#         print(json.dumps(playout_data, indent=4))\n",
+    "        \n",
+    "        f_name = playout_data[0]\n",
+    "        playout_num = f_name.split(\"_\")[4]\n",
+    "        node_num = f_name.split(\"_\")[3].split(\"node\")[1]\n",
+    "                \n",
+    "        print(\"\\n# node\", node_num, \", playout\", playout_num, \"\\n\")\n",
+    "        \n",
+    "        avg_compute_list = []\n",
+    "        avg_total_list = []\n",
+    "        for f in playout_data:\n",
+    "            with open(log_dir+\"/\"+f) as json_file:\n",
+    "                data = json.load(json_file)\n",
+    "                \n",
+    "                compute_sum = 0\n",
+    "                for d in data:\n",
+    "#                     print(d)\n",
+    "                    if d == \"mcts_time\":\n",
+    "                        for x in data[d]:\n",
+    "#                             print(\"compute time\", x[\"time\"][\"compute\"])\n",
+    "                            compute_sum += x[\"time\"][\"compute\"]\n",
+    "#                     else:\n",
+    "#                         print(d, data[d])\n",
+    "                    if (d == \"total_time\"):\n",
+    "                        avg_total_list.append(data[d][0])\n",
+    "#                 print(\"compute_sum\", compute_sum)\n",
+    "                avg_compute_list.append(compute_sum)\n",
+    "        print(\"avg_compute_time:\", round(compute_sum, 3))\n",
+    "        print(\"avg_total_time: \", round(sum(avg_total_list)/len(avg_total_list), 3) )\n",
+    "        print(\"avg_sync_time: \", round(sum(avg_total_list)/len(avg_total_list) - compute_sum, 3))\n",
+    "        \n",
+    "                "
    ]
   }
  ],
